# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.649 2006/05/16 04:29:02 agaffney Exp $

  15 May 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  add strict_start and strict_end parameters to _add_partition()
  add _find_current_minor_for_part() function to help with resizing
  fix logical/extended logic in _partition_delete_step()
  in _partition_resize_step(), delete, recreate at new size, resize, delete
  call resize2fs with no size argument so it fills entire partition
  more logging
  only delete, recreate, resize, delete if growing
  pass new size to resize2fs in K

  9 May 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIStorageDevice.py:
  call reorder_minors() from tidy_partitions() instead of
  set_partitions_from_disk()
  add code to reorder_minors() to take extended/logical into consideration with
  non-free partitions

  30 Apr 2006; Preston Cody <codeman@gentoo.org>
  added a check of the length of the directory in /usr/src if under 6 characters
  should fix bug 131809

  19 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIArchitectureTemplate.py:
  automatically emerge splashutils and splash-themes-livecd if kernel_bootsplash
  and livecd-kernel

  16 Apr 2006; Preston Cody <codeman@gentoo.org>
  src/GLIGenDialog.py:
  change temp_use="-* " to temp_use="" because apparantly it's a bad idea to -*

  15 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIInstallProfile.py:
  change kernel-modules to not be so stupid

  9 Apr 2006; Preston Cody <codeman@gentoo.org>
  GLIMD: fix display problem with execute.pyhtml.
  make tables better.

  8 Apr 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIInstallProfile.py:
  fix handling of int/float for minor
  src/templates/x86ArchitectureTemplate.py:
  save/restore partition name
  src/GLIStorageDevice.py:
  support for partition name
